code alignment to new version of daany

--- a/notebooks/Sample_use_of_daany.ipynb
+++ b/notebooks/Sample_use_of_daany.ipynb
@@ -2,80 +2,270 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "Console.WriteLine(\"Hello NOtebook Jupyter from .NET\");"
-   ],
-   "outputs": [],
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "\r\n",
-    "#r \"nuget:Daany.LinA.win-x64,1.0.3\""
-   ],
+   },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
-      "text/html": ""
+      "text/html": [
+       "\r\n",
+       "<div>\r\n",
+       "    <div id='dotnet-interactive-this-cell-19284.Microsoft.DotNet.Interactive.Http.HttpPort' style='display: none'>\r\n",
+       "        The below script needs to be able to find the current output cell; this is an easy method to get it.\r\n",
+       "    </div>\r\n",
+       "    <script type='text/javascript'>\r\n",
+       "async function probeAddresses(probingAddresses) {\r\n",
+       "    function timeout(ms, promise) {\r\n",
+       "        return new Promise(function (resolve, reject) {\r\n",
+       "            setTimeout(function () {\r\n",
+       "                reject(new Error('timeout'))\r\n",
+       "            }, ms)\r\n",
+       "            promise.then(resolve, reject)\r\n",
+       "        })\r\n",
+       "    }\r\n",
+       "\r\n",
+       "    if (Array.isArray(probingAddresses)) {\r\n",
+       "        for (let i = 0; i < probingAddresses.length; i++) {\r\n",
+       "\r\n",
+       "            let rootUrl = probingAddresses[i];\r\n",
+       "\r\n",
+       "            if (!rootUrl.endsWith('/')) {\r\n",
+       "                rootUrl = `${rootUrl}/`;\r\n",
+       "            }\r\n",
+       "\r\n",
+       "            try {\r\n",
+       "                let response = await timeout(1000, fetch(`${rootUrl}discovery`, {\r\n",
+       "                    method: 'POST',\r\n",
+       "                    cache: 'no-cache',\r\n",
+       "                    mode: 'cors',\r\n",
+       "                    timeout: 1000,\r\n",
+       "                    headers: {\r\n",
+       "                        'Content-Type': 'text/plain'\r\n",
+       "                    },\r\n",
+       "                    body: probingAddresses[i]\r\n",
+       "                }));\r\n",
+       "\r\n",
+       "                if (response.status == 200) {\r\n",
+       "                    return rootUrl;\r\n",
+       "                }\r\n",
+       "            }\r\n",
+       "            catch (e) { }\r\n",
+       "        }\r\n",
+       "    }\r\n",
+       "}\r\n",
+       "\r\n",
+       "function loadDotnetInteractiveApi() {\r\n",
+       "    probeAddresses([\"http://192.168.1.153:1000/\", \"http://172.18.224.1:1000/\", \"http://172.25.240.1:1000/\", \"http://127.0.0.1:1000/\"])\r\n",
+       "        .then((root) => {\r\n",
+       "        // use probing to find host url and api resources\r\n",
+       "        // load interactive helpers and language services\r\n",
+       "        let dotnetInteractiveRequire = require.config({\r\n",
+       "        context: '19284.Microsoft.DotNet.Interactive.Http.HttpPort',\r\n",
+       "                paths:\r\n",
+       "            {\r\n",
+       "                'dotnet-interactive': `${root}resources`\r\n",
+       "                }\r\n",
+       "        }) || require;\r\n",
+       "\r\n",
+       "            window.dotnetInteractiveRequire = dotnetInteractiveRequire;\r\n",
+       "\r\n",
+       "            window.configureRequireFromExtension = function(extensionName, extensionCacheBuster) {\r\n",
+       "                let paths = {};\r\n",
+       "                paths[extensionName] = `${root}extensions/${extensionName}/resources/`;\r\n",
+       "                \r\n",
+       "                let internalRequire = require.config({\r\n",
+       "                    context: extensionCacheBuster,\r\n",
+       "                    paths: paths,\r\n",
+       "                    urlArgs: `cacheBuster=${extensionCacheBuster}`\r\n",
+       "                    }) || require;\r\n",
+       "\r\n",
+       "                return internalRequire\r\n",
+       "            };\r\n",
+       "        \r\n",
+       "            dotnetInteractiveRequire([\r\n",
+       "                    'dotnet-interactive/dotnet-interactive'\r\n",
+       "                ],\r\n",
+       "                function (dotnet) {\r\n",
+       "                    dotnet.init(window);\r\n",
+       "                },\r\n",
+       "                function (error) {\r\n",
+       "                    console.log(error);\r\n",
+       "                }\r\n",
+       "            );\r\n",
+       "        })\r\n",
+       "        .catch(error => {console.log(error);});\r\n",
+       "    }\r\n",
+       "\r\n",
+       "// ensure `require` is available globally\r\n",
+       "if ((typeof(require) !==  typeof(Function)) || (typeof(require.config) !== typeof(Function))) {\r\n",
+       "    let require_script = document.createElement('script');\r\n",
+       "    require_script.setAttribute('src', 'https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js');\r\n",
+       "    require_script.setAttribute('type', 'text/javascript');\r\n",
+       "    \r\n",
+       "    \r\n",
+       "    require_script.onload = function() {\r\n",
+       "        loadDotnetInteractiveApi();\r\n",
+       "    };\r\n",
+       "\r\n",
+       "    document.getElementsByTagName('head')[0].appendChild(require_script);\r\n",
+       "}\r\n",
+       "else {\r\n",
+       "    loadDotnetInteractiveApi();\r\n",
+       "}\r\n",
+       "\r\n",
+       "    </script>\r\n",
+       "</div>"
+      ]
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": ""
-     },
-     "metadata": {}
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello NOtebook Jupyter from .NET\r\n"
+     ]
     }
    ],
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "source": [
-    "using Daany.LinA;"
-   ],
-   "outputs": [],
+    "Console.WriteLine(\"Hello NOtebook Jupyter from .NET\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     }
-   }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Daany.LinA.win-x64, 1.3.0</span></li></ul></div></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "#r \"nuget:Daany.LinA.win-x64\""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     }
-   }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "using Daany;\n",
+    "using Daany.LinA;\n",
+    "using System;\n",
+    "using static Daany.LinA.LinA;\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\r\n"
+     ]
+    }
+   ],
+   "source": [
+    " float[,] A = new float[,]\n",
+    "            {\n",
+    "             {-1.01f, 0.86f,-4.60f, 3.31f,-4.81f},\n",
+    "             { 3.98f, 0.53f,-7.04f, 5.29f, 3.55f},\n",
+    "             { 3.30f, 8.26f,-3.89f, 8.20f,-1.51f},\n",
+    "             { 4.43f, 4.96f,-7.66f,-7.33f, 6.18f},\n",
+    "             { 7.31f,-6.43f,-6.16f, 2.47f, 5.58f},\n",
+    "\n",
+    "            };\n",
+    "\n",
+    "            float[] result_wr = new float[] { 2.86f, 2.86f, -0.69f, -0.69f, -10.46f };\n",
+    "            float[] result_wi = new float[] { 10.76f, -10.76f, 4.70f, -4.70f, 0 };\n",
+    "\n",
+    "            {\n",
+    "                (float[] wr, float[] wi, float[,] VL, float[,] VR) = Eigen(A, true, true);\n",
+    "\n",
+    "                //for (int i = 0; i < result_wr.Length; i++)\n",
+    "                //    Console.WriteLine(result_wr[i], wr[i], 2);\n",
+    "\n",
+    "                //for (int i = 0; i < result_wi.Length; i++)\n",
+    "                //    Assert.Equal(result_wi[i], wi[i], 2);\n",
+    "\n",
+    "            }\n",
+    "\n",
+    "\n",
+    "            {\n",
+    "                (float[] wr, float[] wi, float[,] VL, float[,] VR) = Eigen(A, true, true);\n",
+    "\n",
+    "                //for (int i = 0; i < result_wr.Length; i++)\n",
+    "                //    Assert.Equal(result_wr[i], wr[i], 2);\n",
+    "\n",
+    "                //for (int i = 0; i < result_wi.Length; i++)\n",
+    "                //    Assert.Equal(result_wi[i], wi[i], 2);\n",
+    "\n",
+    "            }\n",
+    "\n",
+    "            {\n",
+    "                (float[] wr, float[] wi, float[,] VL, float[,] VR) = Eigen(A, true, true);\n",
+    "\n",
+    "                //for (int i = 0; i < result_wr.Length; i++)\n",
+    "                //    Assert.Equal(result_wr[i], wr[i], 2);\n",
+    "\n",
+    "                //for (int i = 0; i < result_wi.Length; i++)\n",
+    "                //    Assert.Equal(result_wi[i], wi[i], 2);\n",
+    "\n",
+    "            }\n",
+    "            //\n",
+    "            Console.WriteLine(\"Hello World!\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
